[tool.poetry]
name = "quizbook"
version = "0.1.0"
description = ""
authors = ["santos borom <santos.borom@arkastra.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
